--- a/Launcher/Launcher/ListBoxItemModuleControl.xaml
+++ b/Launcher/Launcher/ListBoxItemModuleControl.xaml
@@ -1,4 +1,4 @@
-﻿<UserControl x:Class="Launcher.MenuItemControl"
+﻿<UserControl x:Class="Launcher.ListBoxItemModuleControl"
              xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
              xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
              xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006" 
@@ -14,7 +14,7 @@
             <RowDefinition Height="*"></RowDefinition>
         </Grid.RowDefinitions>
         <StackPanel Grid.Column="0" Grid.Row="0" Grid.RowSpan="2" HorizontalAlignment="Center" VerticalAlignment="Center" >
-            <TextBlock x:Name="TextBlockTitle" TextAlignment="Center"   Foreground="{StaticResource AccentColorBrush}" FontSize="16"  TextWrapping="Wrap" />
+            <TextBlock x:Name="TextBlockTitle" TextAlignment="Center" Foreground="{StaticResource AccentColorBrush}" FontSize="16"  TextWrapping="Wrap" />
         </StackPanel>
         <StackPanel Grid.Column="1" Grid.RowSpan="2" Background="White">
             <TextBlock Name="TextBlockDescription" TextWrapping="Wrap" FontSize="14" Margin="10,20,5,0"/>
