--- a/Launcher/Launcher/MainWindowLauncher.xaml
+++ b/Launcher/Launcher/MainWindowLauncher.xaml
@@ -41,10 +41,15 @@
             <Label x:Name="DateTimeLabel"  HorizontalAlignment="Right" Grid.Column="6" Grid.Row="1" HorizontalContentAlignment="Right"/>
             <Label HorizontalAlignment="Right" Content="Виктор Викторович"  Grid.Column="6" Grid.Row="0" HorizontalContentAlignment="Right" Background="{StaticResource AccentColorBrush}" />
             <TextBox Controls:TextboxHelper.Watermark="Поиск" Grid.Row="0" Grid.Column="1" Grid.ColumnSpan="4" Grid.RowSpan="2" VerticalAlignment="Center"/>
+            <Button Content="Button" Grid.Column="5" HorizontalAlignment="Left" Margin="23,20,0,0" Grid.RowSpan="2" VerticalAlignment="Top" Width="75" Click="Button_Click"/>
 
         </Grid>
         <ListBox x:Name="ListBoxModules" Margin="-6" Grid.Row="1" Grid.Column="0" Grid.RowSpan="7" Grid.ColumnSpan="7" ScrollViewer.HorizontalScrollBarVisibility="Hidden" ScrollViewer.VerticalScrollBarVisibility="Hidden" >
         </ListBox>
+
+        <Grid x:Name="ContentGrid" Grid.Row="1" Grid.Column="1" Grid.ColumnSpan="6" Grid.RowSpan="7">
+        </Grid>
+
         <!--<Controls:TransitioningContentControl x:Name="transitionins" Grid.Row="1" Grid.Column="2" Grid.RowSpan="8" Grid.ColumnSpan="5" Transition="LeftReplace" >
             <Grid>
                 <Grid.ColumnDefinitions>
